Fix broken layout on table pages

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -50,6 +50,10 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+#reactRoot {
+    height: 100%;
+}
+
 .clipForScreenReader {
     clip: rect(1px, 1px, 1px, 1px);
     clip-path: inset(50%);
